--- a/slither.config.json
+++ b/slither.config.json
@@ -1,5 +1,5 @@
 {
-    "filter_paths": "lib",
+    "filter_paths": "(lib/|test/|script/)",
     "solc_remaps": [
         "ds-test/=lib/solmate/lib/ds-test/src/",
         "forge-std/=lib/forge-std/src/",
